fix version specific stuff